<resources>
    <string name="app_name">TacklingNephrotic</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="four_plus"> more than 1000 mg/dL ++++</string>
    <string name="about_app">An app to tackle daily tasks of manual logging of urine readings, medication tracking and many more stuffs..</string>
    <string name="app_name_header">Tackling Nephrotic</string>
    <string name="madeInIndia">Made in India</string>
    <string name="client_id">482693276004-qgsf7ettn3lfv4ds11mo9gp28el07tfv.apps.googleusercontent.com</string>
    <string name="already_have_an_account">Already have an Account?</string>
    <string name="sign_in">Sign In</string>
    <string name="app_name_supporter">with ease..</string>
    <string name="get_started_button_text">Get Started</string>
    <string name="no_internet_exclaim">No Internet Connectivity</string>
    <string name="unknown_error_with_error_code">Unknown Error with Error Code</string>

    <string name="facebook_app_id">5468703409836116</string>
    <string name="fb_login_protocol_scheme">fb5468703409836116</string>
    <string name="facebook_client_token">352754f355be418395ffd7e1a6bc631d</string>
    <string name="welcome_back_header">Welcome back !</string>
    <string name="login_with_phone_number_btn_text">Login with Phone Number</string>
    <string name="line_1_privacy_policy">By continuing, you are agreeing to our</string>
    <string name="line_2_privacy_policy">User Agreement and Privacy Policy</string>
    <string name="login_with_google_btn_text">Login with Google</string>
    <string name="login_failed_msg">Login Failed</string>
    <string name="login_failed_msg2">Login Failed! Something went wrong</string>
    <string name="role_selector_header_text">Select Your Role</string>
    <string name="role_selection_usage_msg">To give you best experience of the app, we need a role for you</string>
    <string name="user_role_care_taker_msg">I am Care Taker</string>
    <string name="user_role_patient_msg">I am Patient</string>
    <string name="fatal_error">Fatal Error !!</string>
</resources>