<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_welcome">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.ruviapps.tacklingnephrotic.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <argument
            android:name="userTest"
            app:argType="string"
            android:defaultValue='"Negative"' />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.ruviapps.tacklingnephrotic.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.ruviapps.tacklingnephrotic.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_result"
        android:name="com.ruviapps.tacklingnephrotic.ui.test_result.ResultPickerFragment"
        android:label="Result"
        tools:layout="@layout/result_picker_fragment"
        >
        <action
            android:id="@+id/action_nav_result_to_nav_home"
            app:destination="@id/nav_home" >
           </action>
    </fragment>
    <deepLink
        android:id="@+id/deepLink"
        app:uri="0drd7hpogt" />
    <fragment
        android:label="Welcome"
        tools:layout="@layout/fragment_welcome"
        android:id="@+id/nav_welcome"
        android:name="com.ruviapps.tacklingnephrotic.ui.welcome.WelcomeFragment">
        <action
            android:id="@+id/action_welcome_to_nav_result"
            app:destination="@id/nav_result" />
    </fragment>
</navigation>