<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.BottomSheet">


        <com.google.android.material.button.MaterialButton
            app:icon="@drawable/googleg_disabled_color_18"
            android:id="@+id/googleButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:text="@string/login_with_google_btn_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/phoneBtn" />

        <com.google.android.material.textview.MaterialTextView
            android:textAppearance="@style/TextAppearance.Material3.HeadlineMedium"
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/largeDimen"
            android:layout_marginTop="@dimen/largeDimen"
            android:layout_marginEnd="@dimen/largeDimen"
            android:text="@string/welcome_back_header"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <com.google.android.material.button.MaterialButton
            app:icon="@drawable/fui_ic_phone_white_24dp"
            android:id="@+id/phoneBtn"
            android:layout_marginStart="@dimen/extra_extra_large_dimen"
            android:layout_marginTop="@dimen/largeDimen"
            android:layout_marginEnd="@dimen/extra_extra_large_dimen"
            android:text="@string/login_with_phone_number_btn_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
        <!--<com.facebook.login.widget.LoginButton
            android:id="@+id/facebookBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:text="Login with Facebook"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />-->

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/mediumDimen"
            android:text="@string/line_1_privacy_policy"
            app:layout_constraintEnd_toEndOf="@+id/googleButton"
            app:layout_constraintStart_toStartOf="@+id/googleButton"
            app:layout_constraintTop_toBottomOf="@+id/googleButton" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/mediumDimen"
            android:text="@string/line_2_privacy_policy"
            app:layout_constraintEnd_toEndOf="@+id/textView8"
            app:layout_constraintStart_toStartOf="@+id/textView8"
            app:layout_constraintTop_toBottomOf="@+id/textView8" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
