<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

<ScrollView
    android:fillViewport="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.textview.MaterialTextView
        android:textAppearance="@style/TextAppearance.Material3.HeadlineMedium"
        android:id="@+id/selectRoleTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/mediumDimen"
        android:layout_marginTop="@dimen/extra_extra_large_dimen"
        android:layout_marginEnd="@dimen/mediumDimen"
        android:text="@string/role_selector_header_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
        android:textAlignment="center"
        android:id="@+id/roleExplanationText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/mediumDimen"
        android:layout_marginTop="@dimen/largeDimen"
        android:layout_marginEnd="@dimen/mediumDimen"
        android:text="@string/role_selection_usage_msg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/selectRoleTxt" />

    <com.google.android.material.card.MaterialCardView
        android:layout_marginTop="@dimen/extra_extra_large_dimen"
        android:id="@+id/careTakerCard"
        android:clickable="true"
        android:focusable="true"
        android:checkable="true"
        app:cardCornerRadius="@dimen/largeDimen"
        app:cardElevation="@dimen/mediumDimen"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/roleExplanationText">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/caretakerImage"
                android:layout_marginTop="@dimen/mediumDimen"
                app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize50Percent"
                app:srcCompat="@mipmap/caretaker_round"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_width="150dp"
                android:layout_height="150dp"/>
            <com.google.android.material.textview.MaterialTextView
                android:text="@string/user_role_care_taker_msg"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                android:layout_marginTop="@dimen/mediumDimen"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/caretakerImage"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:layout_marginTop="@dimen/extra_extra_large_dimen"
        android:id="@+id/patientCard"
        android:clickable="true"
        android:checkable="true"
        android:focusable="true"
        app:cardElevation="@dimen/mediumDimen"
        app:cardCornerRadius="@dimen/largeDimen"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/careTakerCard">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/patientImage"
            android:layout_marginTop="@dimen/mediumDimen"
            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize50Percent"
            app:srcCompat="@mipmap/patient_round"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="150dp"
            android:layout_height="150dp"/>
            <com.google.android.material.textview.MaterialTextView
                android:text="@string/user_role_patient_msg"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                android:layout_marginTop="@dimen/mediumDimen"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/patientImage"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>

</layout>
