<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools">


<androidx.constraintlayout.widget.ConstraintLayout
    android:background="@color/orange"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">


    <TextView
        android:textAlignment="center"
        android:gravity="center"
        android:textColor="@color/black"
        android:id="@+id/appHeaderTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="cursive"
        android:text="@string/welcome_header"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="with ease.."
        app:layout_constraintEnd_toEndOf="@+id/appHeaderTv"
        app:layout_constraintTop_toBottomOf="@+id/appHeaderTv" />

    <Button
        android:text="Get Started"
        android:fontFamily="sans-serif-medium"
        android:elevation="@dimen/smallDimen"
        android:id="@+id/getStartedButton"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintVertical_bias="0.37" />

    <com.google.android.material.textview.MaterialTextView
        android:textColor="@android:color/black"
        android:text="@string/already_have_an_account"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="@id/getStartedButton"
        app:layout_constraintTop_toBottomOf="@id/getStartedButton"
        android:id="@+id/alreadyLoginText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <com.google.android.material.textview.MaterialTextView
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:layout_marginStart="@dimen/smallDimen"
        app:layout_constraintTop_toTopOf="@id/alreadyLoginText"
        android:id="@+id/signIn"
        app:layout_constraintStart_toEndOf="@id/alreadyLoginText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/smallDimen"
        android:gravity="center"
        android:lines="4"
        android:text="@string/about_app"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appHeaderTv"
        app:layout_constraintVertical_bias="0.060000002" />


    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="32dp"
        android:fontFamily="cursive"
        android:text="@string/madeInIndia"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>